test/files/neg/macro-blackbox-fundep-materialization.check
Test_2.scala:7: Iso.materializeIso is not a valid implicit value for Iso[Test.Foo,L] because:
hasMatchingSymbol reported error: type mismatch;
 found   : Iso[Test.Foo,(Int, String, Boolean)]
 required: Iso[Test.Foo,Nothing]
Note: (Int, String, Boolean) >: Nothing, but trait Iso is invariant in type U.
You may wish to define U as -U instead. (SLS 4.5)
    val equiv = foo(Foo(23, "foo", true))
                   ^
Test_2.scala:7: error: could not find implicit value for parameter iso: Iso[Test.Foo,L]
    val equiv = foo(Foo(23, "foo", true))
                   ^
one error found
